--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,18 @@
-# Created by venv; see https://docs.python.org/3/library/venv.html
-*
+# Virtual Environment
+wisdom/
+venv/
+env/
+
+# Python artifacts
 __pycache__/
 *.pyc
-wisdom/
+*.pyo
+*.pyd
+
+# Database
 *.db
+miniazon.db
+
+# OS generated files
+.DS_Store
+Thumbs.db
